--- a/content/404.md
+++ b/content/404.md
@@ -2,9 +2,9 @@
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
-# Content not found.
+# nasin li pakala.
 
-Go <a href="index.njk">home</a>.
+o tawa <a href="index.njk">open</a>.
 
 <!--
 
